--- a/shopai-front/.env.example
+++ b/shopai-front/.env.example
@@ -1,7 +1,7 @@
-COMPANY_NAME="Vercel Inc."
-TWITTER_CREATOR="@vercel"
-TWITTER_SITE="https://nextjs.org/commerce"
-SITE_NAME="Next.js Commerce"
+COMPANY_NAME="Nivx"
+TWITTER_CREATOR="@nivx"
+TWITTER_SITE="https://nivx.ai/"
+SITE_NAME="Nivx AI"
 SHOPIFY_REVALIDATION_SECRET=""
 SHOPIFY_STOREFRONT_ACCESS_TOKEN=""
 SHOPIFY_STORE_DOMAIN="[your-shopify-store-subdomain].myshopify.com"
