--- a/shopai-front/package.json
+++ b/shopai-front/package.json
@@ -35,7 +35,8 @@
     "openai": "^4.24.0",
     "react": "18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "weaviate-ts-client": "^2.0.0"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
