--- a/shopai-front/package.json
+++ b/shopai-front/package.json
@@ -29,6 +29,7 @@
     "@vercel/postgres": "^0.5.1",
     "ai": "^2.2.30",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
     "geist": "^1.0.0",
     "lucide-react": "^0.300.0",
     "next": "14.0.0",
@@ -36,7 +37,8 @@
     "react": "18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "18.2.0",
-    "weaviate-ts-client": "^2.0.0"
+    "weaviate-ts-client": "^2.0.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
