--- a/shopify-nivx/package.json
+++ b/shopify-nivx/package.json
@@ -26,8 +26,12 @@
     "@google/generative-ai": "^0.1.3",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@vercel/postgres": "^0.5.1",
     "ai": "^2.2.30",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "geist": "^1.0.0",
@@ -37,7 +41,12 @@
     "react": "18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.2.0",
+    "vaul": "^0.8.0",
     "weaviate-ts-client": "^2.0.0",
+    "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
