--- a/shopify-nivx/package.json
+++ b/shopify-nivx/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "geist": "^1.0.0",
+    "google-auth-library": "^9.4.1",
     "lucide-react": "^0.300.0",
     "next": "14.0.0",
     "openai": "^4.24.0",
