docker containorization & google run deployment pipeline completion

--- a/shopify-nivx/Dockerfile
+++ b/shopify-nivx/Dockerfile
@@ -1,31 +1,52 @@
+# ----- Stage 1: Build Stage -----
+FROM node:18-alpine as build-stage
 
-FROM node:18-alpine
-
-
-# Set the argument for the OPENAI_API_KEY
+# Define build arguments
+ARG COMPANY_NAME
+ARG TWITTER_CREATOR
+ARG TWITTER_SITE
+ARG SITE_NAME
+ARG SHOPIFY_REVALIDATION_SECRET
+ARG SHOPIFY_STOREFRONT_ACCESS_TOKEN
+ARG SHOPIFY_STORE_DOMAIN
 ARG OPENAI_API_KEY
 
-# Set the environment variable inside the container
-ENV OPENAI_API_KEY=${OPENAI_API_KEY}
+# Set eessemtoial nvironment variables for the build stage
+ENV COMPANY_NAME=$COMPANY_NAME
+ENV TWITTER_CREATOR=$TWITTER_CREATOR
+ENV TWITTER_SITE=$TWITTER_SITE
+ENV SITE_NAME=$SITE_NAME
+ENV SHOPIFY_REVALIDATION_SECRET=$SHOPIFY_REVALIDATION_SECRET
+ENV SHOPIFY_STOREFRONT_ACCESS_TOKEN=$SHOPIFY_STOREFRONT_ACCESS_TOKEN
+ENV SHOPIFY_STORE_DOMAIN=$SHOPIFY_STORE_DOMAIN
+ENV OPENAI_API_KEY=$OPENAI_API_KEY
 
-
-# Set the working directory in the container
 WORKDIR /nivx
 
 # Install pnpm
 RUN npm install -g pnpm
 
-# Copy package.json and optionally other configuration files (like pnpm-lock.yaml)
 COPY package.json pnpm-lock.yaml* ./
 
-# Install dependencies
 RUN pnpm install
 
-# Copy the rest of your application's source code
 COPY . .
 
-# Build the Next.js application using the locally installed next
 RUN pnpm build
 
-# Your application's start command
+# ----- Stage 2: Final Image -----
+FROM node:18-alpine
+
+WORKDIR /nivx
+
+# Install pnpm
+RUN npm install -g pnpm
+
+COPY --from=build-stage /nivx/.next ./.next
+COPY --from=build-stage /nivx/public ./public
+COPY --from=build-stage /nivx/package.json ./package.json
+COPY --from=build-stage /nivx/pnpm-lock.yaml* ./pnpm-lock.yaml*
+
+RUN pnpm install --prod
+
 CMD ["pnpm", "start"]
