secure gemini authentication and update openai transcription pipeline

--- a/shopify-nivx/.env.example
+++ b/shopify-nivx/.env.example
@@ -1,13 +1,22 @@
 COMPANY_NAME=Nivx
+
 TWITTER_CREATOR=@nivx
 TWITTER_SITE=https://nivx.ai/
-SITE_NAME=Nivx AI
+SITE_NAME=
+
 SHOPIFY_REVALIDATION_SECRET=
 SHOPIFY_STOREFRONT_ACCESS_TOKEN=
-SHOPIFY_STORE_DOMAIN=yourdomain.myshopify.com
+SHOPIFY_STORE_DOMAIN=domain.myshopify.com
+
 OPENAI_API_KEY=
+
 GOOGLE_API_KEY=
 GOOGLE_PROJECT_ID=
-WEAVIATE_SCHEME=
+
+WEAVIATE_SCHEME='visit weaviate create cluster on their cloud to get this then run the script/rweaviate.ts file once'
 WEAVIATE_HOST=
 WEAVIATE_API_KEY=
+
+GOOGLE_SERVICE_CLIENT_EMAIL="Create Google Service User in G Cloud and download JSON Keys to get email"
+GOOGLE_SERVICE_PRIVATE_KEY="Create Google Service User in G Cloud and download JSON Keys to get private key"
+
