--- a/shopify-nivx/package.json
+++ b/shopify-nivx/package.json
@@ -32,8 +32,10 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@vercel/postgres": "^0.5.1",
     "ai": "^2.2.30",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "form-data": "^4.0.0",
     "framer-motion": "^10.16.16",
     "geist": "^1.0.0",
     "google-auth-library": "^9.4.1",
