--- a/shopify-nivx/package.json
+++ b/shopify-nivx/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@vercel/analytics": "^1.1.1",
     "@vercel/postgres": "^0.5.1",
     "ai": "^2.2.30",
     "axios": "^1.6.2",
